feat(patten): add ratelimiter and bulkhead pattern

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,17 @@ resilience4j.circuitbreaker.configs.default.automaticTransitionFromOpenToHalfOpe
 resilience4j.circuitbreaker.instances.myServiceCircuitBreaker.baseConfig=default
 resilience4j.timelimiter.instances.myServiceTimeLimiter.timeoutDuration=2s
 resilience4j.timelimiter.instances.myServiceTimeLimiter.cancelRunningFuture=true
+
+resilience4j.retry.instances.myServiceRetry.maxAttempts=3
+resilience4j.retry.instances.myServiceRetry.waitDuration=1000
+resilience4j.retry.instances.myServiceRetry.retryExceptions=org.springframework.web.client.HttpServerErrorException
+
+resilience4j.ratelimiter.instances.myServiceRateLimiter.limitForPeriod=2
+resilience4j.ratelimiter.instances.myServiceRateLimiter.limitRefreshPeriod=10s
+resilience4j.ratelimiter.instances.myServiceRateLimiter.timeoutDuration=0s
+
+# ?? ??? ???? ?? ??
+resilience4j.bulkhead.instances.myServiceBulkhead.maxWaitDuration=1s
+# ??? ??? ? ?? ?? ?? ?
+resilience4j.bulkhead.instances.myServiceBulkhead.maxConcurrentCalls=5
+
